# src/controllers/auth.js
@@ -52,7 +52,7 @@ export const logoutUserController = async (req, res) => {
 
   res.status(200).json({
     status: 200,
-    data: sessionId,
+    sessionId: sessionId,
   });
 };
 
